# Amanita

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
amanita/: Cargo.toml
amanita-client/: Cargo.toml
amanita-client/src/: lib.rs
amanita-common/: Cargo.toml
amanita-common/src/: lib.rs
amanita-server/: Cargo.toml
amanita-server/src/: lib.rs
amanita/src/: main.rs
scripts/: test.sh
