[package]
name = "amanita-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amanita-common = { path = "../amanita-common" }
axum = { version = "0.6.20", features = ["ws", "macros"] }
env_logger = "0.10.0"
log = "0.4.20"
tokio = { version = "1.33.0", features = ["full"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
