[package]
name = "amanita"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
url = "2.4.1"
amanita-server = { path = "../amanita-server" }
amanita-client = { path = "../amanita-client" }
tokio = "1.33.0"
